# build-in-public

./: .env.example  .gitignore  README.md  config_example.yaml  pyproject.toml  spec.md  spec_github.md
.github/workflows/: weekly-buildinpublic.yml
data/archive/: 2026-06-01.json  github-2026-06-07.json
examples/: post_examples.md
posts/: 2026-06-01.md
posts/daily/: 2026-06-07.md
prompts/: generate_post.md  system_prompt.md
src/build_in_public/: __init__.py  __main__.py  cli.py  config.py
src/build_in_public/analytics/: ga4.py  search_console.py
src/build_in_public/github/: client.py  formatter.py
src/build_in_public/llm/: client.py  prompt_builder.py
src/build_in_public/utils/: archive_manager.py  date_helpers.py
src/build_in_public/writers/: markdown_writer.py
